--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,20 @@
 title: Kasper Siig
 email: kasper@siig.tech
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  DevOps Enthusiast with a specialty in whatever interests me.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kaspersiig
 github_username:  ksiig
+lang: en
+keywords:
+  - DevOps
+  - cloud
+
+author:
+  name: Kasper Siig
+  email: kasper@siig.tech
+  twitter: kaspersiig
 
 # Build settings
 # theme: jekyll-theme-hydejack
@@ -35,6 +42,18 @@ remote_theme: hydecorp/hydejack@v9
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+# menu:
+#   - title: Blog
+#     url:   /blog/
+#   - title: Projects
+#     url:   /projects/
+#   - title: Resume
+#     url:   /resume/
+#   - title: About
+#     url:   /about/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
